--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -6,7 +6,7 @@ server {
       try_files $uri $uri/ /index.html;
     }
     location /api {
-        proxy_pass  http://localhost:51819;
+        proxy_pass  http://dhm.wtf:51819;
     }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
