--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,15 +1,27 @@
 server {
-    listen 80;
-    location / {
-      root   /usr/share/nginx/html;
-      index  index.html index.htm;
-      try_files $uri $uri/ /index.html;
-    }
-    location /api {
-        proxy_pass  http://dhm.wtf:51819;
-    }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+    listen 80 default_server;
+    server_name dhm.wtf;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name dhm.wtf;
+    ssl_certificate /etc/nginx/fullchain.pem;
+    ssl_certificate_key /etc/nginx/privkey.pem;
+
+  location / {
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+    try_files $uri $uri/ /index.html;
+  }
+
+  location /api {
+    proxy_pass  http://dhm.wtf:51819;
+  }
+
+  error_page   500 502 503 504  /50x.html;
+  location = /50x.html {
+    root   /usr/share/nginx/html;
+  }
 }
