fix proxy pass (allow /api without :51819 port)

--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,6 +1,9 @@
 server {
     listen 80 default_server;
-    server_name dhm.wtf;
+location /api {
+    proxy_pass  http://dhm.wtf:51819;
+  }
+server_name dhm.wtf;
     return 301 https://$host$request_uri;
 }
 
@@ -17,7 +20,7 @@ server {
   }
 
   location /api {
-    proxy_pass  http://dhm.wtf:51819;
+    proxy_pass  https://dhm.wtf:51819;
   }
 
   error_page   500 502 503 504  /50x.html;
