upgrade to http2

--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,30 +1,20 @@
 server {
-    listen 80 default_server;
-location /api {
-    proxy_pass  http://dhm.wtf:51819;
-  }
-server_name dhm.wtf;
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name dhm.wtf;
+    listen       443 ssl http2;
+    listen       [::]:443 ssl http2;
+    server_name  dhm.wtf;
     ssl_certificate /etc/nginx/fullchain.pem;
     ssl_certificate_key /etc/nginx/privkey.pem;
-
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
-
-  location /api {
-    proxy_pass  https://dhm.wtf:51819;
-  }
-
-  error_page   500 502 503 504  /50x.html;
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
+    root         /usr/share/nginx/html;
+    location /api/ {
+        proxy_pass_header       Server;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Scheme $scheme;
+        proxy_set_header        Host $http_host;
+        proxy_set_header        X-NginX-Proxy true;
+        proxy_connect_timeout   5;
+        proxy_read_timeout      240;
+        proxy_intercept_errors  on;
+        proxy_pass              https://dhm.wtf:51819;
+    }
 }
