fix url after refresh

--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -4,7 +4,13 @@ server {
     server_name  dhm.wtf;
     ssl_certificate /etc/nginx/fullchain.pem;
     ssl_certificate_key /etc/nginx/privkey.pem;
-    root         /usr/share/nginx/html;
+
+    location / {
+       root   /usr/share/nginx/html;
+       index  index.html;
+       try_files $uri $uri/ /index.html;
+    }
+
     location /api/ {
         proxy_pass_header       Server;
         proxy_set_header        X-Real-IP $remote_addr;
